[project]
name = "ghz-group"
version = "1.0.0"
description = "Reproduction code for Figure 2 of Waring, Le Beux, Pere — 'Robust GHZ State Preparation via Majority-Voted Boundary Measurements' (arXiv:2602.19405)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mthree>=3.0.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pylatexenc>=2.10",
    "qiskit>=2.4.1",
    "qiskit-aer>=0.17.2",
    "scipy>=1.17.1",
]
